# gbtcal

./: .gitattributes  .gitignore  AUTHORS  ArgusCalibration.py  CalSeqScan.py  CalibrationResults.py  ChangeLog  Jenkinsfile  Jenkinsfile.groovy  README.md  README.rst  Rcvr68_92.py  calibrator.py  createDcrDecodeEnv  createEnv  dcr_calibrate.py  dcr_decode.sublime-project  dcr_decode_astropy.py  dcr_table.py  do_calibrate.py  gbtcal.sublime-project  new_calibrator.md  ramblings.md  rcvrDCRscans.txt  rcvr_table.py  requirements-test.txt  requirements.txt  setup.cfg  testDcrTable.py  test_calibrator.py  test_dcr_calibrate.py  test_dcr_decode.py  ui_options_map.py
docs/: assumptions.md  calibrator.vsdx  dcr_caveats.md  gbtcal.vsdx
gbtcal/: ArgusCalibration.py  CalSeqScan.py  Rcvr68_92.py  WBandCalibration.py  __init__.py  attenuate.py  calibrate.py  calibrator.py  constants.py  converter.py  dcrtable.py  decode.py  interbeamops.py  interpolops.py  rcvrTable.csv  rcvr_table.py
src/: ArgusCalibration.py  CalSeqScan.py  CalibrationResults.py  Calibrators.py  Rcvr68_92.py  attenuate.py  calalgorithm.py  calibrate.py  calibrateDcrData.py  calibrator.py  constants.py  dcr_calibrate.py  dcr_decode.py  dcr_decode_astropy.py  dcr_table.py  do_calibrate.py  newcalibrate.py  newcalibrator.py  querytable.py  rcvrTable.csv  rcvrTable.test.csv  rcvr_table.py  regression_tests.py  stripped_table.py  test_calibrator.py  test_dcr_calibrate.py  test_dcr_decode.py  test_dcr_table.py  test_newcalibrator.py  util.py
table/: querytable.py  stripped_table.py
test/: getDataForAllRcvrs  (+2 more)
(+994 files in other folders)
