[metadata]
name = gbtcal
author = Thomas Chamberlin
author_email = tchamber@nrao.edu
description = A receiver-agnostic GBT-specific calibration library for continuum data
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = http://github.com/GreenBankObservatory/gbtcal
project-urls =
    Source Code = http://github.com/GreenBankObservatory/gbtcal
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python

[files]
packages =
    gbtcal
    table

data_files =
    gbtcal = gbtcal/rcvrTable.csv
    gbtcal/test = gbtcal/test/rcvrTable.test.csv

[entry_points]
console_scripts =
    gbtcal = gbtcal.calibrate:main
